Make form-data textarea fixed size with scrollbars
This commit fixes the size of the form-data at 50%-4em of the parent
container, and allows scrollbars to appear if it goes over this size.

--- a/resources/css/pack-it-forms.css
+++ b/resources/css/pack-it-forms.css
@@ -32,8 +32,8 @@ body {
     font-family: monospace;
     white-space: pre;
     border: 2px solid black;
-    overflow: hidden;
-    height: auto;
+    height: calc(50% - 4em);
+    overflow: auto;
     background-color: #eeeeee;
 }
 
